@@ -17,6 +17,7 @@ package org.mini2Dx.core.game;
 
 import org.mini2Dx.core.Graphics;
 import org.mini2Dx.core.Mdx;
+import org.mini2Dx.core.TimestepMode;
 import org.mini2Dx.core.util.InterpolationTracker;
 import org.mini2Dx.gdx.utils.Array;
 
@@ -38,11 +39,18 @@ public abstract class GameContainer {
     public abstract void initialise();
 
     /**
-     * Called by mini2Dx pre-update
+     * Called by mini2Dx
      * @param delta The time in seconds since the last update
      */
     public void preUpdate(float delta) {
         Mdx.executor.update(delta);
+    }
+
+    /**
+     * Called by mini2Dx
+     * @param delta The time in seconds since the last update
+     */
+    public void preUpdatePhysics(float delta) {
         InterpolationTracker.preUpdate();
     }
 
@@ -53,7 +61,13 @@ public abstract class GameContainer {
     public abstract void update(float delta);
 
     /**
-     * Interpolate the game state
+     * Update the game physics
+     * @param delta The time in seconds to advance the physics by
+     */
+    public void updatePhysics(float delta) {}
+
+    /**
+     * Interpolate the game physics
      * @param alpha The alpha value to use during interpolation
      */
     public void interpolate(float alpha) {
